配置完毕。